refactor: migrate to web

--- a/package.json
+++ b/package.json
@@ -24,23 +24,18 @@
     "CSGO",
     "CS:GO",
     "CS2",
-    "electron",
     "react"
   ],
-  "main": "main.js",
   "scripts": {
     "build": "node ./scripts/build.mjs",
     "compile": "tsc --noEmit",
     "deadcode": "knip",
     "dev": "node ./scripts/develop.mjs",
     "dev:cli": "node ./scripts/develop-cli.mjs",
-    "electron": "electron ./out/main.js",
     "format": "prettier --write \"**\"",
-    "i18n:extract": "lingui extract --config ./lingui.config.ts --clean --overwrite && lingui extract --config ./src/electron-main/lingui.config.ts --clean --overwrite",
+    "i18n:extract": "lingui extract --config ./lingui.config.ts --clean --overwrite",
     "lint": "eslint \"**\" --concurrency auto",
-    "package": "electron-builder --config electron-builder.config.js",
-    "package:dir": "npm run package -- --dir",
-    "postinstall": "electron-builder install-app-deps && node ./scripts/postinstall.mjs && node ./scripts/build-linter-rules.mjs",
+    "postinstall": "node ./scripts/postinstall.mjs && node ./scripts/build-linter-rules.mjs",
     "t": "npm run test",
     "tw": "npm run test:watch",
     "test": "vitest --run",
@@ -68,6 +63,7 @@
     "@tailwindcss/vite": "4.1.18",
     "@tanstack/react-virtual": "3.13.13",
     "@types/archiver": "7.0.0",
+    "@types/express": "^5.0.6",
     "@types/fs-extra": "11.0.4",
     "@types/mdast": "4.0.4",
     "@types/node": "22.19.3",
@@ -89,11 +85,6 @@
     "deepmerge": "4.3.1",
     "dotenv": "17.2.3",
     "echarts": "5.6.0",
-    "electron": "39.2.7",
-    "electron-builder": "26.0.12",
-    "electron-devtools-installer": "4.0.0",
-    "electron-updater": "6.6.2",
-    "electron-window-state": "5.0.3",
     "esbuild": "0.27.2",
     "eslint": "9.39.2",
     "eslint-config-prettier": "10.1.8",
@@ -105,6 +96,7 @@
     "eslint-plugin-prettier": "5.5.4",
     "eslint-plugin-react": "7.37.5",
     "eslint-plugin-react-hooks": "7.0.1",
+    "express": "^5.2.1",
     "fs-extra": "11.3.3",
     "html-to-image": "1.11.13",
     "knip": "5.75.2",
